# search-ads-cli

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
asa_api_cli/: __init__.py  ad_groups.py  auth.py  brand.py  campaigns.py  impression_share.py  keywords.py  main.py  optimize.py  reports.py
search_ads_cli/: __init__.py  ad_groups.py  auth.py  brand.py  campaigns.py  keywords.py  main.py  optimize.py  reports.py  utils.py
tests/: __init__.py  test_cli.py
